bugs, fixed animation and color contrast

--- a/site/style.css
+++ b/site/style.css
@@ -102,7 +102,7 @@ p {
     padding: 10px 20px;
     border-radius: 3px;
     font-size: 0.85rem;
-    color: #1e2738;
+    color: #7a9cdb;
     border: 1px solid #1e2738;
 }
 
@@ -131,6 +131,6 @@ footer a {
         padding: 40px 15px;
     }
     h1 {
-        font-size: 2 rem;
+        font-size: 2rem;
     }
 }
